# RPGEngine

./: CMakeLists.txt  README.md
Player/: Health.cpp  Health.h  Magic.cpp  Magic.h  Player.h  Stats.cpp  Stats.h
Util/: Combat.h  Equipment.h  Inventory.h  Item.cpp  Item.h  Weapon.h
